# Fllama

./: .gitignore  .metadata  .pubignore  CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  pubspec.yaml
.github/: dependabot.yml
android/: build.gradle  gradle.properties  proguard-rules.pro
android/src/main/: AndroidManifest.xml  CMakeLists.txt  jni.cpp  utils.h
android/src/main/kotlin/ink/xcl/fllama/: FLlama.kt  FLog.kt  FUtils.kt  FllamaData.kt  FllamaPlugin.kt  FllamaService.kt  LlamaContext.kt
example/: .gitignore  DESIGN.md  README.md  pubspec.yaml
example/android/: .gitignore  build.gradle  gradle.properties  settings.gradle
example/android/app/: .gitignore  build.gradle  proguard-rules.pro
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/ink/xcl/fllama_example/: MainActivity.kt
example/harmony/: build-profile.json5  code-linter.json5  oh-package-lock.json5  oh-package.json5
example/harmony/AppScope/: app.json5
example/harmony/AppScope/resources/base/element/: string.json
example/harmony/entry/: build-profile.json5  oh-package-lock.json5  oh-package.json5
example/harmony/entry/src/main/: module.json5
example/harmony/entry/src/main/ets/pages/: Index.ets
example/harmony/entry/src/main/resources/base/element/: string.json
example/harmony/hllama/: BuildProfile.ets  CHANGELOG.md  Index.ets  LICENSE  README.md  build-profile.json5  oh-package-lock.json5  oh-package.json5
example/harmony/hllama/src/main/: module.json5
example/harmony/hllama/src/main/cpp/: CMakeLists.txt  napi_init.cpp
example/harmony/hllama/src/main/cpp/types/libhllama/: Index.d.ts  oh-package.json5
example/harmony/hllama/src/main/ets/: HLlama.ets
example/harmony/hllama/src/main/resources/en_US/element/: string.json
example/harmony/hllama/src/main/resources/zh_CN/element/: string.json
example/ios/: .gitignore  Podfile
example/ios/Runner/: AppDelegate.m  Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: MyApp.dart  main.dart  theme.dart
example/lib/bean/: Enum.dart  newbean.dart  newbean.freezed.dart  newbean.g.dart
example/lib/db/: IsarDao.dart  models.dart  models.g.dart
example/lib/net/: ApiService.dart  HttpEngine.dart  ModelDownloadController.dart
example/lib/utils/: DialogUtils.dart  HorizontalSwipeBack.dart  IconSwitch.dart  MyToast.dart  SideSheet.dart  StoreKV.dart  Tools.dart
example/lib/view/: AboutView.dart  HomeView.dart  ModelManageView.dart
example/lib/view/module/: DownloadButton.dart  ModelListItem.dart
example/lib/view/widget/: ChatDetailWidget.dart  ChatInputWidget.dart  ChatListItemWidget.dart
example/lib/vm/: AboutVM.dart  HomeVM.dart  ModelVM.dart
ios/: fcllama.modulemap  fcllama.podspec  fllama.modulemap  fllama.podspec
ios/Classes/: FLlamaContext.h  FLlamaContext.mm  FllamaPlugin.h  FllamaPlugin.mm
ios/Cpp/: README.md  amx-common.h  amx.cpp  amx.h  clip.cpp  clip.h  common.cpp  common.h  fllama.hpp  fllava.hpp  ggml-aarch64.c  ggml-backend-reg.cpp  ggml-backend.cpp  ggml-backend.h  ggml-common.h  ggml-cpu-aarch64.c  ggml-cpu-aarch64.h  ggml-cpu.c  ggml-cpu.cpp  ggml-cpu.h  ggml-impl.h  ggml-llama.metallib  ggml-metal.m  ggml-metal.metal  ggml-quants.c  ggml-quants.h  ggml.c  ggml.h  grammar-parser.h  llama.cpp  llama.h  llava.cpp  log.h  mmq.cpp  mmq.h  sampling.cpp  sgemm.cpp
ios/Resources/: PrivacyInfo.xcprivacy
lib/: fllama.dart  fllama_method_channel.dart  fllama_platform_interface.dart  fllama_type.dart
scripts/: alignment.sh  amx.cpp.patch  common.cpp.patch  common.h.patch  ggml-backend-reg.cpp.patch  ggml-cpu-aarch64.c.patch  ggml-cpu.c.patch  ggml-cpu.cpp.patch  ggml-metal.m.patch  ggml-metal.metal.patch  ggml-quants.c.patch  ggml.c.patch  llama.cpp.patch  log.h.patch  mmq.h.patch  privacy_manifest_analyser.sh  sgemm.cpp.patch  syncNative.sh
